--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 # Production Environment Variables
-VITE_API_BASE_URL=https://nutriscanapp-production.up.railway.app
+VITE_API_URL=https://nutriscanapp-production.up.railway.app
 VITE_APP_NAME=NutriScan
 VITE_APP_VERSION=1.0.0
 VITE_NODE_ENV=production
